# Domotica

./: .gitignore  CMakeLists.txt  Dockerfile.remote-cpp-env  InstallCmakeUbuntu.txt
src/common/: FilesystemManager.cpp  MqttClient.cpp
src/common/include/: FilesystemManager.h  MqttClient.h
src/libs/easyloggingpp/: CMakeLists.txt
src/libs/mosquitto-2.0.15/lib/cpp/: mosquittopp.cpp  mosquittopp.h
src/util/: FilesystemData.h  MqttData.h
